l10n feature added (init)
Conflicts:
	index.html

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -1,1 +1,3 @@
 source-dialog-title=HTML5 Word Cloud
+browser-support-title=Your browser is not supported!
+about-dialog-title=About HTML5 Word Cloud
