--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -1,3 +1,93 @@
 source-dialog-title=HTML5 Word Cloud
-browser-support-title=Your browser is not supported!
+source-dialog-about-btn=About
+source-dialog-start-btn=Start
+
+source-blogger=Blogger
+source-cp=Copy &amp; Paste
+source-example=Examples
+source-facebook=Facebook
+source-feed=RSS Feed
+source-file=File
+source-googleplus=Google+
+source-pixnet=PIXNET
+source-plurk=Plurk
+source-tumblr=Tumblr
+source-twitter=Twitter
+source-wikipedia=Wikipedia
+source-wordpresscom=WordPress.com
+source-wretchcc=Wretch
+
+panel-blogger-help=Some blogs doesn't provide full text feed.
+panel-blogger-label=Username
+panel-cp-help=The text will be processed locally without being uploaded.
+panel-cp-label=Paste the text below
+panel-example-nytimes-global=New York Times News Feed (Global Edition)
+panel-example-nytimes-us=New York Times News Feed (U.S.)
+panel-example-wikipedia-cloud=Wikipedia entry: Cloud
+panel-feed-help=Only public feeds that has ever been subscribed (and indexed by Google) could be accessed.
+panel-feed-label=Feed URL
+panel-file-browse=Browse
+panel-file-encoding-help=UTF-8 is the usual value.
+panel-file-encoding=Character Encoding
+panel-file-help=Plain text only. Will be processed locally without being uploaded.
+panel-file-label=File
+panel-googleplus-label=Profile ID
+panel-googleplus-help=Find the ID by copying it from the URL. Leave it empty to access your own profile.
+panel-pixnet-help=Some blogs doesn't provide full text feed.
+panel-pixnet-label=Username
+panel-plurk-help=Only public Plurk timeline can be accessed.
+panel-plurk-label=Username
+panel-tumblr-help=Some tumblrs doesn't provide full text feed.
+panel-tumblr-label=Username
+panel-twitter-help=Only public Twitter timeline can be accessed.
+panel-twitter-label=Username
+panel-wikipedia=Title
+panel-wordpresscom-help=Some blogs doesn't provide full text feed.
+panel-wordpresscom-label=Username
+panel-wretchcc-help=Some blogs doesn't provide full text feed.
+panel-wretchcc-label=Username
+
+language-title.title=Language
+
+
+dashboard-back-btn.title=Back
+dashboard-back-span=Back
+dashboard-disperse-btn.title=Disperse
+dashboard-disperse-span=Disperse
+dashboard-enlarge-btn.title=Enlarge
+dashboard-enlarge-span=Enlarge
+dashboard-gather-up-btn.title=Gather Up
+dashboard-gather-up-span=Gather Up
+dashboard-list-btn.title=Edit List
+dashboard-list-span=Edit List
+dashboard-refresh-btn.title=Refresh
+dashboard-refresh-span=Refresh
+dashboard-save-disk-btn.title=Save to disk
+dashboard-save-disk-span=Save
+dashboard-shape-btn.title=Switch Shape
+dashboard-shape-span=Shape
+dashboard-shrink-btn.title=Shrink
+dashboard-shrink-span=Shrink
+dashboard-theme-btn.title=Switch Theme
+dashboard-theme-span=Theme
+dashboard-share-facebook-btn.title=Share on Facebook
+dashboard-share-plurk-btn.title=Share on Plurk
+dashboard-share-tumblr-btn.title=Share on Tumblr
+dashboard-share-twitter-btn.title=Share on Twitter
+
+share-dialog-title=...
+share-dialog-facebook-login-btn=Facebook Login
+share-dialog-cancel-btn=Cancel
+share-dialog-reupload-btn=New Upload
+share-dialog-share-btn=Share
+
+list-dialog-help.innerHTML=For advance usage, <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
+list-dialog-label=Modify List
+list-dialog-cancel-btn=Cancel
+list-dialog-confirm-btn=Confirm
+
 about-dialog-title=About HTML5 Word Cloud
+about-dialog-close-btn=Close
+
+browser-support-title=Your browser is not supported!
+browser-support-message=To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.
