--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -1,3 +1,93 @@
 source-dialog-title=HTML5 文字雲
-browser-support-title=您的瀏覽器並不支援！
+source-dialog-about-btn=關於
+source-dialog-start-btn=開始
+
+source-blogger=Blogger
+source-cp=複製/貼上文字
+source-example=基本範例
+source-facebook=臉書
+source-feed=RSS 來源
+source-file=上傳檔案
+source-googleplus=Google+
+source-pixnet=痞客幫
+source-plurk=噗浪
+source-tumblr=Tumblr
+source-twitter=推特
+source-wikipedia=維基百科
+source-wordpresscom=WordPress.com
+source-wretchcc=無名小站
+
+panel-blogger-help=有些 blog 並不提供全文來源
+panel-blogger-label=使用者名稱
+panel-cp-help=您貼上的文字只會在本機使用，不會被上傳
+panel-cp-label=請將文字貼至文字方塊
+panel-example-nytimes-global=紐約時報(國際版)的新聞來源
+panel-example-nytimes-us=紐約時報(美國版)的新聞來源
+panel-example-wikipedia-cloud=維基百科《Cloud》條目
+panel-feed-help=文字雲只能取得公開的 RSS 來源
+panel-feed-label=來源 URL
+panel-file-browse=瀏覽
+panel-file-encoding-help=通常是 UTF-8
+panel-file-encoding=文字編碼
+panel-file-help=只允許使用純文字檔案，你選的檔案不會被上傳
+panel-file-label=請選擇檔案
+panel-googleplus-label=個人頁面 ID
+panel-googleplus-help=請直接將要查詢的 Google+ URL 貼上，或是不輸入 URL ，我們將存取您自己的 Google+ 個人檔案
+panel-pixnet-help=有些 blog 並不提供全文來源
+panel-pixnet-label=使用者名稱
+panel-plurk-help=文字雲只能取得公開的噗浪時間軸
+panel-plurk-label=使用者名稱
+panel-tumblr-help=有些 tumblrs 並不提供全文來源
+panel-tumblr-label=使用者名稱
+panel-twitter-help=文字雲只能取得公開的推特時間軸
+panel-twitter-label=使用者名稱
+panel-wikipedia=維基條目
+panel-wordpresscom-help=有些 blog 並不提供全文來源
+panel-wordpresscom-label=使用者名稱
+panel-wretchcc-help=有些 blog 並不提供全文來源
+panel-wretchcc-label=使用者名稱
+
+language-title.title=選擇語言
+
+
+dashboard-back-btn.title=返回
+dashboard-back-span=返回
+dashboard-disperse-btn.title=淺少文字密度
+dashboard-disperse-span=淺少密度
+dashboard-enlarge-btn.title=放大字體
+dashboard-enlarge-span=放大字體
+dashboard-gather-up-btn.title=增加文字密度
+dashboard-gather-up-span=增加密度
+dashboard-list-btn.title=編輯關鍵字清單
+dashboard-list-span=關鍵字
+dashboard-refresh-btn.title=重排
+dashboard-refresh-span=重排
+dashboard-save-disk-btn.title=下載到本機
+dashboard-save-disk-span=下載
+dashboard-shape-btn.title=變更文字雲形狀
+dashboard-shape-span=形狀
+dashboard-shrink-btn.title=縮小字體
+dashboard-shrink-span=縮小字體
+dashboard-theme-btn.title=變更文字雲配色
+dashboard-theme-span=配色
+dashboard-share-facebook-btn.title=分享到臉書
+dashboard-share-plurk-btn.title=分享到噗浪
+dashboard-share-tumblr-btn.title=分享到 Tumblr
+dashboard-share-twitter-btn.title=分享到推特
+
+share-dialog-title=...
+share-dialog-facebook-login-btn=登入臉書帳號
+share-dialog-cancel-btn=取消
+share-dialog-reupload-btn=重新上傳圖片
+share-dialog-share-btn=分享
+
+list-dialog-help.innerHTML=您可以將文字方塊中的關鍵字清單複製起來，並且到 <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排
+list-dialog-label=修改關鍵字清單
+list-dialog-cancel-btn=取消
+list-dialog-confirm-btn=確定
+
 about-dialog-title=關於 HTML5 文字雲
+about-dialog-close-btn=關閉
+
+browser-support-title=您的瀏覽器並不支援！
+browser-support-message=要使用 HTML5 文字雲，請使用最新版的 Firefox / Chrome / Safari / Internet Explorer ，謝謝！
