add l10n feature in javascript code
ISSUE: l10n label: n-files-selected[other] can't be tested yet
ISSUE: textContent updated by javascript can't be changed
       when invoking webL10n.setLanguage();

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -1,3 +1,5 @@
+app-title=HTML5 Word Cloud
+
 source-dialog-title=HTML5 Word Cloud
 source-dialog-about-btn=About
 source-dialog-start-btn=Start
@@ -91,3 +93,36 @@ about-dialog-close-btn=Close
 
 browser-support-title=Your browser is not supported!
 browser-support-message=To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.
+
+
+share-to-facebook=share-to-facebook
+share-to-plurk=share-to-plurk
+share-to-twitter=share-to-twitter
+uploading-to-imgur=uploading-to-imgur
+image-uploaded=image-uploaded
+error-fallback-to-text=error-fallback-to-text
+facebook-getting-photo=facebook-getting-photo
+need-facebook-login=need-facebook-login
+share-to-tumblr=share-to-tumblr
+
+facebook-ready=facebook-ready
+facebook-start-to-login=facebook-start-to-login
+google-ready=google-ready
+google-start-to-login=google-start-to-login
+
+downloading=downloading
+loading=loading
+analyzing=analyzing
+no_data=no_data
+no_list_output=no_list_output
+
+right-click-to-save=Please right click and choose "Save As..."\n to save the generated image.
+
+frquent-terms=most frequent terms: {{terms}}
+frquent-terms-more=most frequent terms: {{terms}}...
+
+n-file-selected= {[ plural(n) ]}
+n-file-selected[zero]=no file selected
+n-file-selected[one]=a file selected
+n-file-selected[other]={{n}} files selected
+plain-text-file-please=Please select a plain text file.
