--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -1,3 +1,5 @@
+app-title=HTML5 文字雲
+
 source-dialog-title=HTML5 文字雲
 source-dialog-about-btn=關於
 source-dialog-start-btn=開始
@@ -91,3 +93,36 @@ about-dialog-close-btn=關閉
 
 browser-support-title=您的瀏覽器並不支援！
 browser-support-message=要使用 HTML5 文字雲，請使用最新版的 Firefox / Chrome / Safari / Internet Explorer ，謝謝！
+
+
+share-to-facebook=分享至臉書
+share-to-plurk=分享至噗浪
+share-to-twitter=分享至推特
+uploading-to-imgur=上傳至 imgur.com
+image-uploaded=圖片已上傳
+error-fallback-to-text=error-fallback-to-text(XXX 中文)
+facebook-getting-photo=facebook-getting-photo(XXX 中文)
+need-facebook-login=您需要登入臉書
+share-to-tumblr=分享至 Tumblr
+
+facebook-ready=已登入臉書
+facebook-start-to-login=登入臉書
+google-ready=已登入 Google 
+google-start-to-login=登入 Google
+
+downloading=下載中
+loading=讀取中
+analyzing=分析中
+no_data=沒有關鍵字資料
+no_list_output=無關鍵字輸出
+
+right-click-to-save=請點選滑鼠右鍵→「另存圖片」以儲存圖片
+
+frquent-terms=頻率最高的關鍵字：{{terms}}
+frquent-terms-more=頻率最高的關鍵字：{{terms}}…
+
+n-file-selected= {[ plural(n) ]}
+n-file-selected[zero]=沒有選取檔案
+n-file-selected[one]=已選取一個檔案
+n-file-selected[other]=已選取 {{n}} 個檔案
+plain-text-file-please=請選取純文字格式的檔案
