using translate() in javascript code to implement l10n feature add window.__ as the alias of document.webL10n.translate

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -5,7 +5,7 @@ source-dialog-about-btn=About
 source-dialog-start-btn=Start
 
 source-blogger=Blogger
-source-cp=Copy &amp; Paste
+source-cp=Copy & Paste
 source-example=Examples
 source-facebook=Facebook
 source-feed=RSS Feed
@@ -77,7 +77,6 @@ dashboard-share-plurk-btn.title=Share on Plurk
 dashboard-share-tumblr-btn.title=Share on Tumblr
 dashboard-share-twitter-btn.title=Share on Twitter
 
-share-dialog-title=...
 share-dialog-facebook-login-btn=Facebook Login
 share-dialog-cancel-btn=Cancel
 share-dialog-reupload-btn=New Upload
