UI string review

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -54,11 +54,11 @@ language-title.title=Language
 
 dashboard-back-btn.title=Back
 dashboard-back-span=Back
-dashboard-disperse-btn.title=Disperse
+dashboard-disperse-btn.title=Widen the gaps
 dashboard-disperse-span=Disperse
-dashboard-enlarge-btn.title=Enlarge
+dashboard-enlarge-btn.title=Enlarge Text
 dashboard-enlarge-span=Enlarge
-dashboard-gather-up-btn.title=Gather Up
+dashboard-gather-up-btn.title=Tighten the gaps
 dashboard-gather-up-span=Gather Up
 dashboard-list-btn.title=Edit List
 dashboard-list-span=Edit List
@@ -68,7 +68,7 @@ dashboard-save-disk-btn.title=Save to disk
 dashboard-save-disk-span=Save
 dashboard-shape-btn.title=Switch Shape
 dashboard-shape-span=Shape
-dashboard-shrink-btn.title=Shrink
+dashboard-shrink-btn.title=Shrink Text
 dashboard-shrink-span=Shrink
 dashboard-theme-btn.title=Switch Theme
 dashboard-theme-span=Theme
@@ -83,7 +83,7 @@ share-dialog-reupload-btn=New Upload
 share-dialog-share-btn=Share
 
 list-dialog-help.innerHTML=For advance usage, <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
-list-dialog-label=Modify List
+list-dialog-label=Edit List
 list-dialog-cancel-btn=Cancel
 list-dialog-confirm-btn=Confirm
 
@@ -94,26 +94,26 @@ browser-support-title=Your browser is not supported!
 browser-support-message=To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.
 
 
-share-to-facebook=share-to-facebook
-share-to-plurk=share-to-plurk
-share-to-twitter=share-to-twitter
-uploading-to-imgur=uploading-to-imgur
-image-uploaded=image-uploaded
-error-fallback-to-text=error-fallback-to-text
-facebook-getting-photo=facebook-getting-photo
-need-facebook-login=need-facebook-login
-share-to-tumblr=share-to-tumblr
+share-to-facebook=Share to Facebook
+share-to-plurk=Share to Plurk
+share-to-twitter=Share to Twitter
+uploading-to-imgur=Uploading to Imgur...
+image-uploaded=Image Uploaded
+error-fallback-to-text=Upload error, fallback to text-only sharing.
+facebook-getting-photo=Loading Facebook Photo...
+need-facebook-login=You need to log into Facebook first.
+share-to-tumblr=Share to Tumblr
 
-facebook-ready=facebook-ready
-facebook-start-to-login=facebook-start-to-login
-google-ready=google-ready
-google-start-to-login=google-start-to-login
+facebook-ready=Logged in to Facebook. Press "Start" to load your News Feed.
+facebook-start-to-login=Press "Start" to log into Facebook.
+google-ready=Logged in to Google. Press "Start" to load the profile.
+google-start-to-login=Press "Start" to log into Google.
 
-downloading=downloading
-loading=loading
-analyzing=analyzing
-no_data=no_data
-no_list_output=no_list_output
+downloading=Downloading...
+loading=Loading...
+analyzing=Analyzing...
+no_data=No data retrived. Please try again.
+no_list_output=No text generated. Please try other sources.
 
 right-click-to-save=Please right click and choose "Save As..."\n to save the generated image.
 
@@ -121,7 +121,7 @@ frquent-terms=most frequent terms: {{terms}}
 frquent-terms-more=most frequent terms: {{terms}}...
 
 n-file-selected= {[ plural(n) ]}
-n-file-selected[zero]=no file selected
-n-file-selected[one]=a file selected
-n-file-selected[other]={{n}} files selected
+n-file-selected[zero]=No file selected
+n-file-selected[one]=1 file selected
+n-file-selected[other]=Selected {{n}} files
 plain-text-file-please=Please select a plain text file.
