--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -7,46 +7,46 @@ source-dialog-start-btn=開始
 source-blogger=Blogger
 source-cp=複製/貼上文字
 source-example=基本範例
-source-facebook=臉書
-source-feed=RSS 來源
-source-file=上傳檔案
+source-facebook=Facebook
+source-feed=RSS Feed
+source-file=檔案
 source-googleplus=Google+
-source-pixnet=痞客幫
+source-pixnet=痞客邦
 source-plurk=噗浪
 source-tumblr=Tumblr
-source-twitter=推特
+source-twitter=Twitter
 source-wikipedia=維基百科
 source-wordpresscom=WordPress.com
 source-wretchcc=無名小站
 
-panel-blogger-help=有些 blog 並不提供全文來源
+panel-blogger-help=有些 Blog 並不提供全文來源。
 panel-blogger-label=使用者名稱
-panel-cp-help=您貼上的文字只會在本機使用，不會被上傳
-panel-cp-label=請將文字貼至文字方塊
-panel-example-nytimes-global=紐約時報(國際版)的新聞來源
-panel-example-nytimes-us=紐約時報(美國版)的新聞來源
-panel-example-wikipedia-cloud=維基百科《Cloud》條目
-panel-feed-help=文字雲只能取得公開的 RSS 來源
+panel-cp-help=您貼上的文字會直接處理，不會被上傳。
+panel-cp-label=文字
+panel-example-nytimes-global=英文紐約時報國際版新聞
+panel-example-nytimes-us=英文紐約時報美國版新聞
+panel-example-wikipedia-cloud=英文維基百科《Cloud》條目
+panel-feed-help=只能取得公開的 RSS 來源。
 panel-feed-label=來源 URL
 panel-file-browse=瀏覽
-panel-file-encoding-help=通常是 UTF-8
+panel-file-encoding-help=通常是 UTF-8。
 panel-file-encoding=文字編碼
-panel-file-help=只允許使用純文字檔案，你選的檔案不會被上傳
-panel-file-label=請選擇檔案
+panel-file-help=只允許使用純文字檔案；您選的檔案會直接處理，不會被上傳。
+panel-file-label=選擇檔案
 panel-googleplus-label=個人頁面 ID
-panel-googleplus-help=請直接將要查詢的 Google+ URL 貼上，或是不輸入 URL ，我們將存取您自己的 Google+ 個人檔案
-panel-pixnet-help=有些 blog 並不提供全文來源
+panel-googleplus-help=ID 可在頁面網址上找到。不輸入則存取登入帳號的個人頁面。
+panel-pixnet-help=有些部落格並不提供全文來源
 panel-pixnet-label=使用者名稱
-panel-plurk-help=文字雲只能取得公開的噗浪時間軸
+panel-plurk-help=只能取得公開的噗浪時間軸。
 panel-plurk-label=使用者名稱
-panel-tumblr-help=有些 tumblrs 並不提供全文來源
+panel-tumblr-help=有些 Tumblr 並不提供全文來源。
 panel-tumblr-label=使用者名稱
-panel-twitter-help=文字雲只能取得公開的推特時間軸
+panel-twitter-help=只能取得公開的 Twitter 時間軸。
 panel-twitter-label=使用者名稱
-panel-wikipedia=維基條目
-panel-wordpresscom-help=有些 blog 並不提供全文來源
+panel-wikipedia=條目標題
+panel-wordpresscom-help=有些網誌並不提供全文來源。
 panel-wordpresscom-label=使用者名稱
-panel-wretchcc-help=有些 blog 並不提供全文來源
+panel-wretchcc-help=有些部落格並不提供全文來源。
 panel-wretchcc-label=使用者名稱
 
 language-title.title=選擇語言
@@ -54,36 +54,36 @@ language-title.title=選擇語言
 
 dashboard-back-btn.title=返回
 dashboard-back-span=返回
-dashboard-disperse-btn.title=淺少文字密度
-dashboard-disperse-span=淺少密度
+dashboard-disperse-btn.title=增加文字間隔
+dashboard-disperse-span=散開
 dashboard-enlarge-btn.title=放大字體
-dashboard-enlarge-span=放大字體
-dashboard-gather-up-btn.title=增加文字密度
-dashboard-gather-up-span=增加密度
-dashboard-list-btn.title=編輯關鍵字清單
-dashboard-list-span=關鍵字
-dashboard-refresh-btn.title=重排
+dashboard-enlarge-span=放大
+dashboard-gather-up-btn.title=減少文字間隔
+dashboard-gather-up-span=聚集
+dashboard-list-btn.title=編輯詞彙清單
+dashboard-list-span=編輯
+dashboard-refresh-btn.title=重新整理
 dashboard-refresh-span=重排
-dashboard-save-disk-btn.title=下載到本機
+dashboard-save-disk-btn.title=下載產生的文字雲圖片
 dashboard-save-disk-span=下載
-dashboard-shape-btn.title=變更文字雲形狀
+dashboard-shape-btn.title=變更形狀
 dashboard-shape-span=形狀
 dashboard-shrink-btn.title=縮小字體
-dashboard-shrink-span=縮小字體
-dashboard-theme-btn.title=變更文字雲配色
+dashboard-shrink-span=縮小
+dashboard-theme-btn.title=變更配色
 dashboard-theme-span=配色
-dashboard-share-facebook-btn.title=分享到臉書
+dashboard-share-facebook-btn.title=分享到 Facebook
 dashboard-share-plurk-btn.title=分享到噗浪
 dashboard-share-tumblr-btn.title=分享到 Tumblr
-dashboard-share-twitter-btn.title=分享到推特
+dashboard-share-twitter-btn.title=分享到 Twitter
 
-share-dialog-facebook-login-btn=登入臉書帳號
+share-dialog-facebook-login-btn=登入 Facebook 帳號
 share-dialog-cancel-btn=取消
-share-dialog-reupload-btn=重新上傳圖片
+share-dialog-reupload-btn=上傳最新版
 share-dialog-share-btn=分享
 
-list-dialog-help.innerHTML=您可以將文字方塊中的關鍵字清單複製起來，並且到 <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排
-list-dialog-label=修改關鍵字清單
+list-dialog-help.innerHTML=您可以將複製此詞彙清單，到 <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排。
+list-dialog-label=編輯詞彙清單
 list-dialog-cancel-btn=取消
 list-dialog-confirm-btn=確定
 
@@ -94,34 +94,34 @@ browser-support-title=您的瀏覽器並不支援！
 browser-support-message=要使用 HTML5 文字雲，請使用最新版的 Firefox / Chrome / Safari / Internet Explorer ，謝謝！
 
 
-share-to-facebook=分享至臉書
+share-to-facebook=分享至 Facebook
 share-to-plurk=分享至噗浪
-share-to-twitter=分享至推特
-uploading-to-imgur=上傳至 imgur.com
-image-uploaded=圖片已上傳
-error-fallback-to-text=error-fallback-to-text(XXX 中文)
-facebook-getting-photo=facebook-getting-photo(XXX 中文)
-need-facebook-login=您需要登入臉書
+share-to-twitter=分享至 Twitter
+uploading-to-imgur=正在上傳至 Imgur…
+image-uploaded=圖片上傳完成
+error-fallback-to-text=上傳失敗，改為僅分享文字
+facebook-getting-photo=正在載入 Facebook 照片…
+need-facebook-login=您需要先登入 Facebook。
 share-to-tumblr=分享至 Tumblr
 
-facebook-ready=已登入臉書
-facebook-start-to-login=登入臉書
-google-ready=已登入 Google 
-google-start-to-login=登入 Google
+facebook-ready=已登入 Facebook，按「開始」載入個人動態時報。
+facebook-start-to-login=按「開始」已登入 Facebook。
+google-ready=已登入 Google，按「開始」載入頁面內容。
+google-start-to-login=按「開始」以登入 Google。
 
-downloading=下載中
-loading=讀取中
-analyzing=分析中
-no_data=沒有關鍵字資料
-no_list_output=無關鍵字輸出
+downloading=下載中…
+loading=讀取中…
+analyzing=分析中…
+no_data=讀取失敗，請稍候再試。
+no_list_output=取得詞彙數量太少，請選其他內容。
 
-right-click-to-save=請點選滑鼠右鍵→「另存圖片」以儲存圖片
+right-click-to-save=請點選滑鼠右鍵→「另存圖片」以儲存圖片。
 
-frquent-terms=頻率最高的關鍵字：{{terms}}
-frquent-terms-more=頻率最高的關鍵字：{{terms}}…
+frquent-terms=最常出現的詞彙：{{terms}}
+frquent-terms-more=最常出現的詞彙：{{terms}}…
 
 n-file-selected= {[ plural(n) ]}
 n-file-selected[zero]=沒有選取檔案
-n-file-selected[one]=已選取一個檔案
+
 n-file-selected[other]=已選取 {{n}} 個檔案
-plain-text-file-please=請選取純文字格式的檔案
+plain-text-file-please=請選取純文字格式的檔案。
