Not fully supported message

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -93,6 +93,8 @@ about-dialog-close-btn=Close
 browser-support-title=Your browser is not supported!
 browser-support-message=To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.
 
+browser-partial-support-title=Your browser is outdated!
+browser-partial-support-message=You may continue use the app, but you will not be able to share the images.
 
 share-to-facebook=Share to Facebook
 share-to-plurk=Share to Plurk
