--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -93,6 +93,8 @@ about-dialog-close-btn=關閉
 browser-support-title=您的瀏覽器並不支援！
 browser-support-message=要使用 HTML5 文字雲，請使用最新版的 Firefox / Chrome / Safari / Internet Explorer ，謝謝！
 
+browser-partial-support-title=您的瀏覽器是舊版！
+browser-partial-support-message=您可以繼續使用，但產生的圖形會無法分享。建議您升級到最新版本。
 
 share-to-facebook=分享至 Facebook
 share-to-plurk=分享至噗浪
