blank.html; IE does not allow data URL to be loaded directly

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -118,6 +118,7 @@ no_data=No data retrived. Please try again.
 no_list_output=No text generated. Please try other sources.
 
 right-click-to-save=Please right click and choose "Save As..."\n to save the generated image.
+image-popup-title=Image (right click to save)
 
 frquent-terms=most frequent terms: {{terms}}
 frquent-terms-more=most frequent terms: {{terms}}...
