--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -118,6 +118,7 @@ no_data=讀取失敗，請稍候再試。
 no_list_output=取得詞彙數量太少，請選其他內容。
 
 right-click-to-save=請點選滑鼠右鍵→「另存圖片」以儲存圖片。
+image-popup-title=圖片（按右鍵另存新檔案）
 
 frquent-terms=最常出現的詞彙：{{terms}}
 frquent-terms-more=最常出現的詞彙：{{terms}}…
