--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -114,7 +114,7 @@ google-start-to-login=Press "Start" to log into Google.
 downloading=Downloading...
 loading=Loading...
 analyzing=Analyzing...
-no_data=No data retrived. Please try again.
+no_data=No data retrieved. Please try again.
 no_list_output=No text generated. Please try other sources.
 
 right-click-to-save=Please right click and choose "Save As..."\n to save the generated image.
