--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -26,7 +26,13 @@ panel-cp-help=The text will be processed locally without being uploaded.
 panel-cp-label=Paste the text below
 panel-example-nytimes-global=New York Times News Feed (Global Edition)
 panel-example-nytimes-us=New York Times News Feed (U.S.)
+panel-example-ynews-politics=Yahoo! 奇摩政治新聞
+panel-example-ynews-entertainment=Yahoo! 奇摩娛樂新聞
+panel-example-daringfireball=Daring Fireball
 panel-example-wikipedia-cloud=Wikipedia entry: Cloud
+panel-example-wikipedia-zh-cloud=Chinese Wikipedia entry: Cloud
+panel-example-roc-president=馬英九總統治國週記
+panel-example-pansci=泛科學探索實驗空間
 panel-feed-help=Only public feeds that has ever been subscribed (and indexed by Google) could be accessed.
 panel-feed-label=Feed URL
 panel-file-browse=Browse
