--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -26,7 +26,13 @@ panel-cp-help=您貼上的文字會直接處理，不會被上傳。
 panel-cp-label=文字
 panel-example-nytimes-global=英文紐約時報國際版新聞
 panel-example-nytimes-us=英文紐約時報美國版新聞
+panel-example-ynews-politics=Yahoo! 奇摩政治新聞
+panel-example-ynews-entertainment=Yahoo! 奇摩娛樂新聞
+panel-example-panel-example-daringfireball=Daring Fireball
 panel-example-wikipedia-cloud=英文維基百科《Cloud》條目
+panel-example-wikipedia-zh-cloud=維基百科《雲》條目
+panel-example-roc-president=馬英九總統治國週記
+panel-example-pancsi=泛科學探索實驗空間
 panel-feed-help=只能取得公開的 RSS 來源。
 panel-feed-label=來源 URL
 panel-file-browse=瀏覽
