--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -33,6 +33,7 @@ panel-example-wikipedia-cloud=Wikipedia entry: Cloud
 panel-example-wikipedia-zh-cloud=Chinese Wikipedia entry: Cloud
 panel-example-roc-president=馬英九總統治國週記
 panel-example-pansci=泛科學探索實驗空間
+panel-example-ptt-bg=批踢踢男女版
 panel-feed-help=Only public feeds that has ever been subscribed (and indexed by Google) could be accessed.
 panel-feed-label=Feed URL
 panel-file-browse=Browse
