--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -33,6 +33,7 @@ panel-example-wikipedia-cloud=英文維基百科《Cloud》條目
 panel-example-wikipedia-zh-cloud=維基百科《雲》條目
 panel-example-roc-president=馬英九總統治國週記
 panel-example-pancsi=泛科學探索實驗空間
+panel-example-ptt-bg=批踢踢男女版
 panel-feed-help=只能取得公開的 RSS 來源。
 panel-feed-label=來源 URL
 panel-file-browse=瀏覽
