New and better sharer UI

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -76,19 +76,34 @@ dashboard-save-disk-btn.title=Save to disk
 dashboard-save-disk-span=Save
 dashboard-shape-btn.title=Switch Shape
 dashboard-shape-span=Shape
+dashboard-share-btn.title=Share the image
+dashboard-share-span=Share
 dashboard-shrink-btn.title=Shrink Text
 dashboard-shrink-span=Shrink
 dashboard-theme-btn.title=Switch Theme
 dashboard-theme-span=Theme
-dashboard-share-facebook-btn.title=Share on Facebook
-dashboard-share-plurk-btn.title=Share on Plurk
-dashboard-share-tumblr-btn.title=Share on Tumblr
-dashboard-share-twitter-btn.title=Share on Twitter
 
-share-dialog-facebook-login-btn=Facebook Login
-share-dialog-cancel-btn=Cancel
+share-dialog-title=Share
+share-dialog-title-input=Title
+share-dialog-caption-input=Caption
 share-dialog-reupload-btn=New Upload
-share-dialog-share-btn=Share
+share-dialog-done-btn=Done
+
+cors-description=Due to CORS restriction, you must wait for Imgur upload before sharing images to other services.
+imgur-limit-msg=We cannot send images to Imgur anymore because today's quota has been exhausted.\nPlease come back and try again tomorrow, or save and upload the image manually.
+
+image-upload-not-supported=Not supported
+share-text-only=Share text
+image-uploading=Uploading image...
+waiting=Waiting for Imgur...
+image-uploaded=Image Shared
+click-to-share=Click to Share
+image-upload-failed=Image failed to upload
+facebook-loading=Sending Photos...
+
+# Quote the text here to protect the ending space
+sep=", "
+frequent-terms-more=...
 
 list-dialog-help.innerHTML=For advance usage, <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
 list-dialog-label=Edit List
