--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -76,19 +76,34 @@ dashboard-save-disk-btn.title=下載產生的文字雲圖片
 dashboard-save-disk-span=下載
 dashboard-shape-btn.title=變更形狀
 dashboard-shape-span=形狀
+dashboard-share-btn.title=分享圖片
+dashboard-share-span=分享
 dashboard-shrink-btn.title=縮小字體
 dashboard-shrink-span=縮小
 dashboard-theme-btn.title=變更配色
 dashboard-theme-span=配色
-dashboard-share-facebook-btn.title=分享到 Facebook
-dashboard-share-plurk-btn.title=分享到噗浪
-dashboard-share-tumblr-btn.title=分享到 Tumblr
-dashboard-share-twitter-btn.title=分享到 Twitter
 
-share-dialog-facebook-login-btn=登入 Facebook 帳號
-share-dialog-cancel-btn=取消
-share-dialog-reupload-btn=上傳最新版
-share-dialog-share-btn=分享
+share-dialog-title=分享圖片
+share-dialog-title-input=標題
+share-dialog-caption-input=說明
+share-dialog-reupload-btn=重新上傳
+share-dialog-done-btn=完成
+
+cors-description=因為 CORS 限制，您必須要等待 Imgur 上傳完畢才能分享到其他網站。
+imgur-limit-msg=Imgur 的每日上傳限制已經用盡，無法上傳。\n請明天再試或是自行下載再手動上傳，謝謝！
+
+image-upload-not-supported=不支援圖片上傳
+share-text-only=分享文字
+image-uploading=圖片上傳中...
+waiting=等待 Imgur 上傳...
+image-uploaded=圖片上傳完成
+click-to-share=立刻分享
+image-upload-failed=圖片無法上傳
+facebook-loading=正在載入圖片...
+
+# Quote the text here to protect the ending space
+sep=、
+frequent-terms-more=⋯
 
 list-dialog-help.innerHTML=您可以將複製此詞彙清單，到 <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排。
 list-dialog-label=編輯詞彙清單
