Update the place of Imgur rate limit message

--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -98,7 +98,7 @@ image-uploading=圖片上傳中...
 waiting=等待 Imgur 上傳...
 image-uploaded=圖片上傳完成
 click-to-share=立刻分享
-image-upload-failed=圖片無法上傳
+image-upload-failed=圖片上傳失敗
 facebook-loading=正在載入圖片...
 
 # Quote the text here to protect the ending space
