--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -112,6 +112,8 @@ list-dialog-confirm-btn=Confirm
 
 about-dialog-title=About HTML5 Word Cloud
 about-dialog-close-btn=Close
+donate=Donation
+donate-desc=If you find this tool useful or you use it for work, please consider contributing financially to cover domain/hosting bills.
 
 browser-support-title=Your browser is not supported!
 browser-support-message=To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.
