--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -112,6 +112,8 @@ list-dialog-confirm-btn=確定
 
 about-dialog-title=關於 HTML5 文字雲
 about-dialog-close-btn=關閉
+donate=捐款
+donate-desc=如果您認為此工具好用，或是您將此工具應用在工作上，請考慮資助本網站的頻寬與網址註冊費用。
 
 browser-support-title=您的瀏覽器並不支援！
 browser-support-message=要使用 HTML5 文字雲，請使用最新版的 Firefox / Chrome / Safari / Internet Explorer ，謝謝！
