Stop prefilling text into sharer boxes

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -84,8 +84,10 @@ dashboard-theme-btn.title=Switch Theme
 dashboard-theme-span=Theme
 
 share-dialog-title=Share
-share-dialog-title-input=Title
-share-dialog-caption-input=Caption
+share-dialog-title-input.placeholder=Title
+share-dialog-desc-input.placeholder=Description
+share-dialog-terms=Terms
+share-dialog-hashtag=Hashtag
 share-dialog-reupload-btn=New Upload
 share-dialog-done-btn=Done
 
