--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -84,8 +84,10 @@ dashboard-theme-btn.title=變更配色
 dashboard-theme-span=配色
 
 share-dialog-title=分享圖片
-share-dialog-title-input=標題
-share-dialog-caption-input=說明
+share-dialog-title-input.placeholder=標題
+share-dialog-desc-input.placeholder=說明
+share-dialog-terms=詞彙
+share-dialog-hashtag=標籤
 share-dialog-reupload-btn=重新上傳
 share-dialog-done-btn=完成
 
