Title for fetchers

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -154,3 +154,9 @@ n-file-selected[zero]=No file selected
 n-file-selected[one]=1 file selected
 n-file-selected[other]=Selected {{n}} files
 plain-text-file-please=Please select a plain text file.
+
+my-word-cloud=My HTML5 Word Cloud
+feed-title=HTML5 Word Cloud of {{title}}
+wikipedia-title=HTML5 Word Cloud of Wikipedia entry: {{title}}
+google-plus-title=HTML5 Word Cloud of a Google+ page
+facebook-title=HTML5 Word Cloud of {{name}}'s Facebook
