Only load Facebook SDK explicitly until the user said so

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -102,6 +102,8 @@ image-uploaded=Image Shared
 click-to-share=Click to Share
 image-upload-failed=Image failed to upload
 facebook-loading=Sending Photos...
+load-facebook-sdk=Load
+facebook-sdk-loading=Loading...
 
 # Quote the text here to protect the ending space
 sep=", "
