--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -102,6 +102,8 @@ image-uploaded=圖片上傳完成
 click-to-share=立刻分享
 image-upload-failed=圖片上傳失敗
 facebook-loading=正在載入圖片...
+load-facebook-sdk=載入
+facebook-sdk-loading=載入中...
 
 # Quote the text here to protect the ending space
 sep=、
