--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties)
+@import url(wordcloud.en-US.properties?_=@@timestamp)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties)
+@import url(wordcloud.zh-TW.properties?_=@@timestamp)
