+ Electronic Frontier Foundation Updates

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -29,6 +29,7 @@ panel-example-nytimes-us=New York Times News Feed (U.S.)
 panel-example-ynews-politics=Yahoo! 奇摩政治新聞
 panel-example-ynews-entertainment=Yahoo! 奇摩娛樂新聞
 panel-example-daringfireball=Daring Fireball
+panel-example-eff=Electronic Frontier Foundation Updates
 panel-example-wikipedia-cloud=Wikipedia entry: Cloud
 panel-example-wikipedia-zh-cloud=Chinese Wikipedia entry: Cloud
 panel-example-roc-president=馬英九總統治國週記
