--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -29,6 +29,7 @@ panel-example-nytimes-us=英文紐約時報美國版新聞
 panel-example-ynews-politics=Yahoo! 奇摩政治新聞
 panel-example-ynews-entertainment=Yahoo! 奇摩娛樂新聞
 panel-example-panel-example-daringfireball=Daring Fireball
+panel-example-eff=Electronic Frontier Foundation Updates
 panel-example-wikipedia-cloud=英文維基百科《Cloud》條目
 panel-example-wikipedia-zh-cloud=維基百科《雲》條目
 panel-example-roc-president=馬英九總統治國週記
