--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -164,5 +164,6 @@ plain-text-file-please=Please select a plain text file.
 my-word-cloud=My HTML5 Word Cloud
 feed-title=HTML5 Word Cloud of {{title}}
 wikipedia-title=HTML5 Word Cloud of Wikipedia entry: {{title}}
+coscup-title=COSCUP {{year}}
 google-plus-title=HTML5 Word Cloud of a Google+ page
 facebook-title=HTML5 Word Cloud of {{name}}'s Facebook
