Show a box with label when the cursor hovers over

--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -150,6 +150,8 @@ analyzing=分析中…
 no_data=讀取失敗，請稍候再試。
 no_list_output=取得詞彙數量太少，請選其他內容。
 
+hover-count={{word}} ({{count}})
+
 image-popup-title=圖片（按右鍵另存新檔案）
 
 frquent-terms=最常出現的詞彙：{{terms}}
