--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -150,6 +150,8 @@ analyzing=Analyzing...
 no_data=No data retrieved. Please try again.
 no_list_output=No text generated. Please try other sources.
 
+hover-count={{word}} ({{count}})
+
 image-popup-title=Image (right click to save)
 
 frquent-terms=most frequent terms: {{terms}}
