--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=hzgdlurw)
+@import url(wordcloud.en-US.properties?_=i1zswuln)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=hzgdlurw)
+@import url(wordcloud.zh-TW.properties?_=i1zswuln)
