--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -139,8 +139,8 @@ facebook-getting-photo=Loading Facebook Photo...
 need-facebook-login=You need to log into Facebook first.
 share-to-tumblr=Share to Tumblr
 
-facebook-ready=Logged in to Facebook. Press "Start" to load your News Feed.
-facebook-start-to-login=Press "Start" to log into Facebook.
+facebook-ready=Press "Start" to load your News Feed.
+facebook-start-to-login=You need to login first.
 google-ready=Logged in to Google. Press "Start" to load the profile.
 google-start-to-login=Press "Start" to log into Google.
 
