--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -139,8 +139,8 @@ facebook-getting-photo=正在載入 Facebook 照片…
 need-facebook-login=您需要先登入 Facebook。
 share-to-tumblr=分享至 Tumblr
 
-facebook-ready=已登入 Facebook，按「開始」載入個人動態時報。
-facebook-start-to-login=按「開始」，登入 Facebook。
+facebook-ready=按「開始」載入個人動態時報。
+facebook-start-to-login=請先登入 Facebook。
 google-ready=已登入 Google，按「開始」載入頁面內容。
 google-start-to-login=按「開始」，登入 Google。
 
