Replace the Start button with Facebook brand for Facebook panel

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -4,6 +4,7 @@ app-title=HTML5 Word Cloud
 source-dialog-title=HTML5 Word Cloud
 source-dialog-about-btn=About
 source-dialog-start-btn=Start
+source-dialog-login-facebook-btn=Login with Facebook
 
 source-blogger=Blogger
 source-cp=Copy & Paste
@@ -140,7 +141,7 @@ need-facebook-login=You need to log into Facebook first.
 share-to-tumblr=Share to Tumblr
 
 facebook-ready=Logged in to Facebook. Press "Start" to load your News Feed.
-facebook-start-to-login=Press "Start" to log into Facebook.
+facebook-start-to-login=You need to login with Facebook first. Word Cloud would need to access your news feed to analyze your stories.
 google-ready=Logged in to Google. Press "Start" to load the profile.
 google-start-to-login=Press "Start" to log into Google.
 
