--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -4,6 +4,7 @@ app-title=HTML5 文字雲
 source-dialog-title=HTML5 文字雲
 source-dialog-about-btn=關於
 source-dialog-start-btn=開始
+source-dialog-login-facebook-btn=登入 Facebook
 
 source-blogger=Blogger
 source-cp=複製/貼上文字
@@ -139,8 +140,8 @@ facebook-getting-photo=正在載入 Facebook 照片…
 need-facebook-login=您需要先登入 Facebook。
 share-to-tumblr=分享至 Tumblr
 
-facebook-ready=按「開始」載入個人動態時報。
-facebook-start-to-login=請先登入 Facebook。
+facebook-ready=已登入 Facebook，按「開始」載入個人動態時報。
+facebook-start-to-login=您需要登入 Facebook。文字雲需要您的動態時報權限才能產生您的專屬文字雲。
 google-ready=已登入 Google，按「開始」載入頁面內容。
 google-start-to-login=按「開始」，登入 Google。
 
