--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=ioyh7lcl)
+@import url(wordcloud.en-US.properties?_=islkroec)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=ioyh7lcl)
+@import url(wordcloud.zh-TW.properties?_=islkroec)
