--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -22,7 +22,7 @@ panel-example-wikipedia-cloud=Wikipedia entry: Cloud
 panel-example-wikipedia-zh-cloud=Chinese Wikipedia entry: Cloud
 panel-file-browse=Browse
 panel-file-encoding-help=UTF-8 is the usual value.
-panel-file-encoding=Character Encoding
+panel-file-encoding=Character encoding
 panel-file-help=Plain text only. Will be processed locally without being uploaded.
 panel-file-label=File
 panel-googleplus-label=Profile ID
