--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=islkzzpi)
+@import url(wordcloud.en-US.properties?_=iyceicjy)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=islkzzpi)
+@import url(wordcloud.zh-TW.properties?_=iyceicjy)
