--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -10,57 +10,24 @@ source-blogger=Blogger
 source-cp=Copy & Paste
 source-example=Examples
 source-facebook=Facebook
-source-feed=RSS Feed
 source-file=File
 source-googleplus=Google+
-source-pixnet=PIXNET
-source-plurk=Plurk
-source-tumblr=Tumblr
-source-twitter=Twitter
 source-wikipedia=Wikipedia
-source-wordpresscom=WordPress.com
-source-wretchcc=Wretch
-source-yamblog=yamblog
 
 panel-blogger-help=Some blogs doesn't provide full text feed.
 panel-blogger-label=Username
 panel-cp-help=The text will be processed locally without being uploaded.
 panel-cp-label=Paste the text below
-panel-example-nytimes-global=New York Times News Feed (Global Edition)
-panel-example-nytimes-us=New York Times News Feed (U.S.)
-panel-example-ynews-politics=Yahoo! 奇摩政治新聞
-panel-example-ynews-entertainment=Yahoo! 奇摩娛樂新聞
-panel-example-daringfireball=Daring Fireball
-panel-example-eff=Electronic Frontier Foundation Updates
 panel-example-wikipedia-cloud=Wikipedia entry: Cloud
 panel-example-wikipedia-zh-cloud=Chinese Wikipedia entry: Cloud
-panel-example-roc-president=馬英九總統治國週記
-panel-example-pansci=泛科學探索實驗空間
-panel-example-ptt-bg=批踢踢男女版
-panel-feed-help=Only public feeds that has ever been subscribed (and indexed by Google) could be accessed.
-panel-feed-label=Feed URL
 panel-file-browse=Browse
 panel-file-encoding-help=UTF-8 is the usual value.
-panel-file-encoding=Character Encoding
+panel-file-encoding=Character encoding
 panel-file-help=Plain text only. Will be processed locally without being uploaded.
 panel-file-label=File
 panel-googleplus-label=Profile ID
 panel-googleplus-help=Find the ID by copying it from the URL. Leave it empty to access your own profile.
-panel-pixnet-help=Some blogs doesn't provide full text feed.
-panel-pixnet-label=Username
-panel-plurk-help=Only public Plurk timeline can be accessed.
-panel-plurk-label=Username
-panel-tumblr-help=Some tumblrs doesn't provide full text feed.
-panel-tumblr-label=Username
-panel-twitter-help=Only public Twitter timeline can be accessed.
-panel-twitter-label=Username
 panel-wikipedia=Title
-panel-wordpresscom-help=Some blogs doesn't provide full text feed.
-panel-wordpresscom-label=Username
-panel-wretchcc-help=Some blogs doesn't provide full text feed.
-panel-wretchcc-label=Username
-panel-yamblog-help=Some blogs doesn't provide full text feed.
-panel-yamblog-label=Username
 
 language-title.title=Language
 
