--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=iyceicjy)
+@import url(wordcloud.en-US.properties?_=iyceq9jh)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=iyceicjy)
+@import url(wordcloud.zh-TW.properties?_=iyceq9jh)
