timdream.org/wordcloud -> wordcloud.timdream.org

--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -78,7 +78,7 @@ facebook-sdk-loading=Loading...
 sep=", "
 frequent-terms-more=...
 
-list-dialog-help.innerHTML=For advance usage, <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
+list-dialog-help.innerHTML=For advance usage, <a href="https://wordcloud2-js.timdream.org/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
 list-dialog-label=Edit List
 list-dialog-cancel-btn=Cancel
 list-dialog-confirm-btn=Confirm
