--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -76,7 +76,7 @@ facebook-sdk-loading=載入中...
 sep=、
 frequent-terms-more=⋯
 
-list-dialog-help.innerHTML=您可以將複製此詞彙清單，到 <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排。
+list-dialog-help.innerHTML=您可以將複製此詞彙清單，到 <a href="https://wordcloud2-js.timdream.org/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排。
 list-dialog-label=編輯詞彙清單
 list-dialog-cancel-btn=取消
 list-dialog-confirm-btn=確定
