--- a/locales/wordcloud.zh-TW.properties
+++ b/locales/wordcloud.zh-TW.properties
@@ -11,7 +11,6 @@ source-cp=複製/貼上文字
 source-example=基本範例
 source-facebook=Facebook
 source-file=檔案
-source-googleplus=Google+
 source-wikipedia=維基百科
 
 panel-cp-help=您貼上的文字會直接處理，不會被上傳。
@@ -23,8 +22,6 @@ panel-file-encoding-help=通常是 UTF-8。
 panel-file-encoding=文字編碼
 panel-file-help=只允許使用純文字檔案；您選的檔案會直接處理，不會被上傳。
 panel-file-label=選擇檔案
-panel-googleplus-label=個人頁面 ID
-panel-googleplus-help=ID 可在頁面網址上找到。不輸入則存取登入帳號的個人頁面。
 panel-wikipedia=條目標題
 
 language-title.title=選擇語言
@@ -79,7 +76,7 @@ facebook-sdk-loading=載入中...
 sep=、
 frequent-terms-more=⋯
 
-list-dialog-help.innerHTML=您可以將複製此詞彙清單，到 <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排。
+list-dialog-help.innerHTML=您可以將複製此詞彙清單，到 <a href="https://wordcloud2-js.timdream.org/">wordcloud2.js</a> 頁面對文字雲進行更細部的編排。
 list-dialog-label=編輯詞彙清單
 list-dialog-cancel-btn=取消
 list-dialog-confirm-btn=確定
@@ -132,6 +129,4 @@ plain-text-file-please=請選取純文字格式的檔案。
 my-word-cloud=我做的 HTML5 文字雲
 feed-title={{title}} 的文字雲
 wikipedia-title=維基百科條目《{{title}}》的文字雲
-coscup-title=開源人年會 {{year}}
-google-plus-title=某個 Google+ 頁面的文字雲
 facebook-title={{name}} 的 Facebook 文字雲
