--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=izl3s1km)
+@import url(wordcloud.en-US.properties?_=k3ifur8p)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=izl3s1km)
+@import url(wordcloud.zh-TW.properties?_=k3ifur8p)
