--- a/locales/wordcloud.en-US.properties
+++ b/locales/wordcloud.en-US.properties
@@ -11,7 +11,6 @@ source-cp=Copy & Paste
 source-example=Examples
 source-facebook=Facebook
 source-file=File
-source-googleplus=Google+
 source-wikipedia=Wikipedia
 
 panel-blogger-help=Some blogs doesn't provide full text feed.
@@ -25,8 +24,6 @@ panel-file-encoding-help=UTF-8 is the usual value.
 panel-file-encoding=Character encoding
 panel-file-help=Plain text only. Will be processed locally without being uploaded.
 panel-file-label=File
-panel-googleplus-label=Profile ID
-panel-googleplus-help=Find the ID by copying it from the URL. Leave it empty to access your own profile.
 panel-wikipedia=Title
 
 language-title.title=Language
@@ -81,7 +78,7 @@ facebook-sdk-loading=Loading...
 sep=", "
 frequent-terms-more=...
 
-list-dialog-help.innerHTML=For advance usage, <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
+list-dialog-help.innerHTML=For advance usage, <a href="https://wordcloud2-js.timdream.org/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.
 list-dialog-label=Edit List
 list-dialog-cancel-btn=Cancel
 list-dialog-confirm-btn=Confirm
@@ -134,6 +131,4 @@ plain-text-file-please=Please select a plain text file.
 my-word-cloud=My HTML5 Word Cloud
 feed-title=HTML5 Word Cloud of {{title}}
 wikipedia-title=HTML5 Word Cloud of Wikipedia entry: {{title}}
-coscup-title=COSCUP {{year}}
-google-plus-title=HTML5 Word Cloud of a Google+ page
 facebook-title=HTML5 Word Cloud of {{name}}'s Facebook
