--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=k3ifur8p)
+@import url(wordcloud.en-US.properties?_=k3ifx8ss)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=k3ifur8p)
+@import url(wordcloud.zh-TW.properties?_=k3ifx8ss)
