--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -1,5 +1,5 @@
 [*]
-@import url(wordcloud.en-US.properties?_=kb4it84v)
+@import url(wordcloud.en-US.properties?_=kb4jj6t7)
 
 [zh-TW]
-@import url(wordcloud.zh-TW.properties?_=kb4it84v)
+@import url(wordcloud.zh-TW.properties?_=kb4jj6t7)
